fix: registration form
